<resources>
    <string name="app_name">QLog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_answeractivity">Answeractivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="group">그룹 관리</string>
    <string name="group_add">친구 추가</string>
    <string name="group_del">친구 삭제</string>
    <string name="friend_add">친구 추가</string>
    <string name="friend_del">친구 삭제</string>
</resources>